tmp-prod-full/objects/ApexAuditTrail__c/ApexAuditTrail__c.object-meta.xml
<CustomObject>
    <description>Apex 실행과 관련된 주요 이벤트 및 트랜잭션의 상세 기록을 제공하여 Salesforce 환경에서 모니터링 할 수 있도록 지원</description>
    <label>로그 관리</label>
    <nameField>
        <displayFormat>{YYYY}{MM}{DD}-{0000000}</displayFormat>
        <label>Name</label>
        <type>AutoNumber</type>
    </nameField>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>