tmp-prod-full/objects/ApexAuditTrail__c/fields/ApexClass__c.field-meta.xml
<CustomField>
    <fullName>ApexClass__c</fullName>
    <description>실행 된 Apex 클래스 명</description>
    <label>ApexClass</label>
    <length>255</length>
    <type>Text</type>
</CustomField>