tmp-prod-full/objects/ApexAuditTrail__c/fields/ErrorCode__c.field-meta.xml
<CustomField>
    <fullName>ErrorCode__c</fullName>
    <description>발생한 오류의 코드</description>
    <label>ErrorCode</label>
    <length>255</length>
    <type>Text</type>
</CustomField>