tmp-prod-full/objects/ApexAuditTrail__c/fields/ErrorMessage__c.field-meta.xml
<CustomField>
    <fullName>ErrorMessage__c</fullName>
    <description>발생한 오류의 설명 메시지</description>
    <label>ErrorMessage</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>