tmp-prod-full/objects/ApexAuditTrail__c/fields/IsFuture__c.field-meta.xml
<CustomField>
    <fullName>IsFuture__c</fullName>
    <defaultValue>false</defaultValue>
    <description>작업이 퓨처 메소드로 실행되었는지 여부를 나타내는 플래그</description>
    <label>IsFuture</label>
    <type>Checkbox</type>
</CustomField>