tmp-prod-full/objects/ApexAuditTrail__c/fields/IsQueueable__c.field-meta.xml
<CustomField>
    <fullName>IsQueueable__c</fullName>
    <defaultValue>false</defaultValue>
    <description>작업이 Queueable 인터페이스로 실행되었는지 여부를 나타내는 플래그</description>
    <label>IsQueueable</label>
    <type>Checkbox</type>
</CustomField>