tmp-prod-full/objects/ApexAuditTrail__c/fields/IsScheduled__c.field-meta.xml
<CustomField>
    <fullName>IsScheduled__c</fullName>
    <defaultValue>false</defaultValue>
    <description>스케쥴링 된 작업인지 여부를 나타내는 플래그</description>
    <label>IsScheduled</label>
    <type>Checkbox</type>
</CustomField>