tmp-prod-full/objects/ApexAuditTrail__c/fields/RequestUrl__c.field-meta.xml
<CustomField>
    <fullName>RequestUrl__c</fullName>
    <description>인터페이스 호출에 사용된 요청 URL ( GET 방식의 경우 Query Parameter 포함 )</description>
    <label>RequestUrl</label>
    <type>Url</type>
</CustomField>