tmp-prod-full/objects/ApexAuditTrail__c/fields/ResponseBody__c.field-meta.xml
<CustomField>
    <fullName>ResponseBody__c</fullName>
    <description>인터페이스 호출의 응답 본문</description>
    <label>ResponseBody</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>