tmp-prod-full/objects/ApexAuditTrail__c/fields/ResponseDateTime__c.field-meta.xml
<CustomField>
    <fullName>ResponseDateTime__c</fullName>
    <description>인터페이스 응답이 수신된 날짜 및 시간</description>
    <label>ResponseDateTime</label>
    <type>DateTime</type>
</CustomField>