tmp-prod-full/objects/ApexAuditTrail__c/fields/RetryErrorMessage__c.field-meta.xml
<CustomField>
    <fullName>RetryErrorMessage__c</fullName>
    <description>재시도 시 발생한 오류 설명 메시지</description>
    <label>RetryErrorMessage</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>