tmp-prod-full/objects/ApexAuditTrail__c/fields/ScopedIds__c.field-meta.xml
<CustomField>
    <fullName>ScopedIds__c</fullName>
    <description>처리 대상 레코드 Id 목록 ( 세미콜론(;) 으로 구분 )</description>
    <label>ScopedIds</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>