tmp-prod-full/objects/ApexAuditTrail__c/fields/StackTrace__c.field-meta.xml
<CustomField>
    <fullName>StackTrace__c</fullName>
    <description>오류 발생 시의 호출 스택 ( 디버깅 용도 )</description>
    <label>StackTrace</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>