tmp-prod-full/objects/ApexAuditTrail__c/fields/Status__c.field-meta.xml
<CustomField>
    <fullName>Status__c</fullName>
    <description>Apex 실행 상태
- SUCCESS : 성공
- ERROR : 오류 발생으로 인한 실패
- PARTIAL : 부분 성공</description>
    <label>Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>ERROR</fullName>
            </value>
            <value>
                <fullName>PARTIAL</fullName>
            </value>
            <value>
                <fullName>SUCCESS</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>