tmp-prod-full/objects/ApexAuditTrail__c/fields/SuccessRecordIds__c.field-meta.xml
<CustomField>
    <fullName>SuccessRecordIds__c</fullName>
    <description>성공적으로 처리 된 레코드 Id 목록 ( 세미콜론(;) 으로 구분 )</description>
    <label>SuccessRecordIds</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>