tmp-prod-full/objects/ApexAuditTrail__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>RequestUrl__c</columns>
    <columns>ErrorMessage__c</columns>
    <columns>RequestDateTime__c</columns>
    <columns>Status__c</columns>
    <columns>HttpStatusCode__c</columns>
    <columns>ApexClass__c</columns>
    <columns>Method__c</columns>
    <columns>StartTimeMillis__c</columns>
    <columns>EndTimeMillis__c</columns>
    <filterScope>Everything</filterScope>
    <label>모두</label>
</ListView>