tmp-prod-full/objects/ApexAuditTrail__c/listViews/All1.listView-meta.xml
<ListView>
    <fullName>All1</fullName>
    <columns>NAME</columns>
    <columns>CREATED_DATE</columns>
    <columns>ErrorCode__c</columns>
    <columns>ErrorMessage__c</columns>
    <columns>StartTimeMillis__c</columns>
    <columns>EndTimeMillis__c</columns>
    <filterScope>Everything</filterScope>
    <label>모두</label>
</ListView>